syntax = "proto3";

option csharp_namespace = "Shopping.Framework.Web.Product.Grpc.Proto";

package ProductApi;


message ProductListInRequestDto {
    string StoreId = 1;
    repeated string ProductIds = 2;
}

message ProductListInQueryResponseDto {
    int32 Total = 1;
    repeated  ProductListInQueryItemResponseDto Products = 2; 
}
message ProductListInQueryItemResponseDto {
    string Id = 1;
    string TenantId = 2;
    string StoreName = 3;
    string StoreId = 4;
    string Code = 5;
    string Name = 6;
    string ImageUrl = 7;
    double Price = 8;
    int32 Status = 9;
    repeated  ProductListInProductModelResponseDto ProductModels = 10; 
}
message ProductListInProductModelResponseDto {
    string Id = 1;
    string ProductId = 2;
    string Value = 3;
    int32 Number = 4;
    double Price = 5;
}